# 24-hour-testers

./: .gitignore  CANTONIOCoding24h-testers-playgroundrunsT3-002latency_test.py  DX_REPORT.md  README.md  REL-002_REPORT.md  RES-002_COMPLIANCE_REPORT.md  SEC-003_REPORT.md  SEC-004_REPORT.md  SUT-CHECKLIST.md  SUT-PACKET.md  TIER2_REPORT.md  checklist_synthesis.json  debug-paths.js  generated-checklist.json  generated_checklist.json  generated_checklist_rows.json  mission-brief.md  mission-checklist.md  new_checklist_item.json  new_checklist_items.json  new_test.json  notes.txt  package-lock.json  package.json  pyproject.toml  sut.err  tier-report-Tier_2_Smoke_Tests.md  tier-report-Tier_3_Security_Edge_Cases.md
.processor/: active-runs.json
agent-resources/prompts/: AGENT_SYSTEM_PROMPT.md
agent-resources/templates/: FOLDER_STRUCTURE.md
config/: environment.json  run_config.json
docs/prompts/: AGENT_SYSTEM_PROMPT.md  INFINITE_BACKLOG_PROMPT.md
docs/reference/: FINAL_REPORT_TEMPLATE.md  FOLDER_STRUCTURE.md
findings/: README.md  bugs.json  improvements.json  strengths.json
processor/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  models.py  processor.py  run_manager.py
processor/interceptors/: fail_fast.py  observability.py
processor/stages/: __init__.py  build_prompt.py  run_agent.py  validate_output.py
processor/tests/: __init__.py  test_backlog_synthesis.py  test_regression.py  test_robustness.py  (+1 more)
scripts/: 24h-cli.js  add_finding.py  checklist-processor.js  run-checklist.ps1  run-checklist.sh
stageflow_processor/: __init__.py  __main__.py  config.py  requirements.txt
sut-server/: db_dump.json  package-lock.json  package.json  server-patched.js  server-rate-limit.js  server-xss-test.js  server.js  test-server.js
test_sut/: SUT-CHECKLIST.md  SUT-PACKET.md  sample_api.py  test_processor.py
tests/: aggressive_race_test.py  concurrent_transfer_test.py  patched_race_test.py  sec-004_transaction_integrity.js  test_checklist_processor.js
(+27 files in other folders)
